# Projeto-Sidra

./: .gitignore  README.md  pyproject.toml
exploracao/: explo_sidra.py
scripts/: dataloader.py  extractor_sidra.py  pipeline_sidra.py  transformer_data.py  transformer_kpi.py
src/load/: data_loader.py
src/main/: pipeline_sidra.py
src/transform/: transformer_gold.py
